# project_huffman_in_khas

./: CMakeLists.txt  achieving_tree.cpp  voidPointer_is_valid.cpp
code/: freqTable.cpp  freqTable.h  hekReader.cpp  hekReader.h  hekWriter.cpp  hekWriter.h  hek_to_pgm_decompress.cpp  huffman_encoder.cpp  huffman_encoder.h  huffman_node.cpp  huffman_node.h  main.cpp  miscellaneous.cpp  miscellaneous.h  node.h  pgmReader.cpp  pgmReader.h  pgmWriter.cpp  pgm_to_hek_compress.cpp  tests.cpp  tests.h  treeNode.cpp  treeNode.h
code/header_files/: hekReader.h  hekWriter.h  miscellaneous.h  pgmReader.h  pgmWriter.h  tests.h  treeNode.h
code/source_codes/: freqTable.cpp  hekReader.cpp  hekWriter.cpp  miscellaneous.cpp  pgmReader.cpp  pgmWriter.cpp  tests.cpp  treeNode.cpp
files/: test_image11_compressed.hek  test_image11_decompressed.pgm  test_image1_compressed.hek  test_image2_compressed.hek  test_image3_compressed.hek  test_image3_decompressed.pgm  test_image4.pgm  test_image4_compressed.hek  test_image5.pgm  test_image6.pgm  test_image7.pgm  test_image8.pgm
files/test_outputs/: data_stream.txt  encoding_matrix.txt  freq_array.txt  output_test14_bCodes_from_leaf_nodes.txt  output_test18_decompressed.pgm  output_test3_data_stream.txt  output_test4_freq_array.txt  output_test6_freqTable.txt  output_test7_leaf_nodes.txt  output_test9_encoding_matrix.txt  replace_w_parent.txt  test_6.txt
